# TalkToDBAgent

./: .gitignore  README.md  TODO.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(protected)/studio/: page.tsx
frontend/app/history/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ThemeToggle.tsx
frontend/lib/: api.ts  toast.ts
frontend/lib/hooks/: useApi.ts
infra/docker/: docker-compose.yml
infra/docker/db/init/: 001_schema_and_seed.sql
scripts/: start-all.cmd  start-all.ps1
server/: pyproject.toml
server/app/: __init__.py  main.py
server/app/api/routes/: auth.py  connections.py  history.py  keys.py  query.py  schema.py
server/app/core/: config.py
server/app/db/: base.py
server/app/db/models/: connection.py  query_history.py  schema_snapshot.py
server/app/schemas/: common.py
server/app/services/llm/: __init__.py  openai.py
server/app/services/sql/: __init__.py  executor.py  guardrails.py  schema_discovery.py  sql_chain.py
